--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #212529;
     color: white;
-    padding: 20px 0;
+    padding: 10px 5px;
     font-size: 14px;
     text-align: center;
   }
@@ -18,9 +18,9 @@
     height: auto;
   }
 
-  .footer-social .footer-text{
-    margin-top: 20px;
-  }
+  /* .footer-social .footer-text{
+    margin-top: 10px;
+  } */
   
   .footer-social-icon {
     margin: 0 10px;
@@ -30,7 +30,7 @@
   }
   
   .footer-social-icon:hover {
-    color: #e50914; /* Netflix red on hover */
+    color: #e50914; /*  red on hover */
   }
   
   /* Font Awesome icons */
